--- a/client/main.html
+++ b/client/main.html
@@ -1,15 +1,3 @@
 <head>
-  <title>Microscope</title>
+  <title>Petition</title>
 </head>
-<body>
-  <div class="container">
-    <header class="navbar navbar-default" role="navigation">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="/">Petition</a>
-      </div>
-    </header>
-    <div id="main">
-      {{> petitionsList}}
-    </div>
-  </div>
-</body>
